--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,12 @@ name = "pypi"
 
 [packages]
 backoff = "*"
-
+Django==4.1.2
+django-autoslug==1.9.8
+django-tinymce==3.4.0
+djangorestframework==3.14.0
+backoff==5.0.1
+requests==2.25.0
 [dev-packages]
 
 [requires]
